--- a/scheduler/Makefile
+++ b/scheduler/Makefile
@@ -89,23 +89,23 @@ DIST_SOURCES = $(isp_exe_SOURCES)
 ETAGS = etags
 CTAGS = ctags
 DISTFILES = $(DIST_COMMON) $(DIST_SOURCES) $(TEXINFOS) $(EXTRA_DIST)
-ACLOCAL = ${SHELL} /home/dhriti/Dropbox/mopperExtension/missing --run aclocal-1.11
+ACLOCAL = ${SHELL} /home/dhriti/Dropbox/Hermes/missing --run aclocal-1.11
 AMTAR = $${TAR-tar}
 AR = ar
-AUTOCONF = ${SHELL} /home/dhriti/Dropbox/mopperExtension/missing --run autoconf
-AUTOHEADER = ${SHELL} /home/dhriti/Dropbox/mopperExtension/missing --run autoheader
-AUTOMAKE = ${SHELL} /home/dhriti/Dropbox/mopperExtension/missing --run automake-1.11
+AUTOCONF = ${SHELL} /home/dhriti/Dropbox/Hermes/missing --run autoconf
+AUTOHEADER = ${SHELL} /home/dhriti/Dropbox/Hermes/missing --run autoheader
+AUTOMAKE = ${SHELL} /home/dhriti/Dropbox/Hermes/missing --run automake-1.11
 AWK = mawk
 BINDIR = /usr/local/bin
 CC = g++
 CCDEPMODE = depmode=gcc3
-CFLAGS = -g -O2 -DFIB -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0
+CFLAGS = -g -O2 -DFIB
 CPP = gcc -E
-CPPFLAGS = -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0
+CPPFLAGS = 
 CXX = g++
 CXXCPP = g++ -E
 CXXDEPMODE = depmode=gcc3
-CXXFLAGS = -g -O2 -DFIB
+CXXFLAGS = -g -O2 -std=c++11 -D_GLIBCXX_USE_CXX11_ABI=0 -DFIB
 CYGPATH_W = echo
 DEFS = -DHAVE_CONFIG_H
 DEPDIR = .deps
@@ -126,9 +126,9 @@ INSTALL_DATA = ${INSTALL} -m 644
 INSTALL_PROGRAM = ${INSTALL}
 INSTALL_SCRIPT = ${INSTALL}
 INSTALL_STRIP_PROGRAM = $(install_sh) -c -s
-JAR = 
-JAVA = 
-JAVAC = 
+JAR = /usr/bin/jar
+JAVA = /usr/bin/java
+JAVAC = /usr/bin/javac
 LD = /usr/bin/ld -m elf_x86_64
 LDFLAGS = 
 LIBDIR = /usr/local/lib
@@ -143,14 +143,14 @@ LIPO =
 LN_S = ln -s
 LTLIBOBJS = 
 MAINT = #
-MAKEINFO = ${SHELL} /home/dhriti/Dropbox/mopperExtension/missing --run makeinfo
+MAKEINFO = ${SHELL} /home/dhriti/Dropbox/Hermes/missing --run makeinfo
 MANIFEST_TOOL = :
 MKDIR_P = /bin/mkdir -p
-MPICC = /usr/bin/mpicc
-MPICXX = /usr/bin/mpicxx
-MPIDIR = /usr/lib/mpich
-MPI_BINDIR = /usr/lib/mpich/bin
-MPI_INCDIR = /usr/lib/mpich/include
+MPICC = /usr/local/bin/mpicc
+MPICXX = /usr/local/bin/mpicxx
+MPIDIR = /usr/local
+MPI_BINDIR = /usr/local/bin
+MPI_INCDIR = /usr/local/include
 NM = /usr/bin/nm -B
 NMEDIT = 
 OBJDUMP = objdump
@@ -171,10 +171,10 @@ SET_MAKE =
 SHELL = /bin/bash
 STRIP = strip
 VERSION = 0.2.0
-abs_builddir = /home/dhriti/Dropbox/mopperExtension/scheduler
-abs_srcdir = /home/dhriti/Dropbox/mopperExtension/scheduler
-abs_top_builddir = /home/dhriti/Dropbox/mopperExtension
-abs_top_srcdir = /home/dhriti/Dropbox/mopperExtension
+abs_builddir = /home/dhriti/Dropbox/Hermes/scheduler
+abs_srcdir = /home/dhriti/Dropbox/Hermes/scheduler
+abs_top_builddir = /home/dhriti/Dropbox/Hermes
+abs_top_srcdir = /home/dhriti/Dropbox/Hermes
 ac_ct_AR = ar
 ac_ct_CC = gcc
 ac_ct_CXX = g++
@@ -205,19 +205,19 @@ htmldir = ${docdir}
 include_ispdir = /usr/local/include/isp
 includedir = ${prefix}/include
 infodir = ${datarootdir}/info
-install_sh = ${SHELL} /home/dhriti/Dropbox/mopperExtension/install-sh
-jar = jar
-java = java
-javac = javac
+install_sh = ${SHELL} /home/dhriti/Dropbox/Hermes/install-sh
+jar = /usr/bin/jar
+java = /usr/bin/java
+javac = /usr/bin/javac
 libdir = ${exec_prefix}/lib
 libexecdir = ${exec_prefix}/libexec
 localedir = ${datarootdir}/locale
 localstatedir = ${prefix}/var
 mandir = ${datarootdir}/man
 mkdir_p = /bin/mkdir -p
-mpi_dir = /usr/lib/mpich
-mpicc = /usr/bin/mpicc
-mpicxx = /usr/bin/mpicxx
+mpi_dir = /usr/local
+mpicc = /usr/local/bin/mpicc
+mpicxx = /usr/local/bin/mpicxx
 oldincludedir = /usr/include
 pdfdir = ${docdir}
 prefix = /usr/local
